# GameFromScratch

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  base.cpp  base.h  entity.cpp  entity.h  game.cpp  game.h  main.cpp  sprite.cpp  sprite.h
src/arch/linux/: display.cpp  display.h
src/arch/multi/: display.cpp  display.h
tests/: CMakeLists.txt  main.cpp  windowTest.cpp
